# treenav

./: .gitignore  Cargo.toml  README.md  treenav.zsh
src/: app.rs  config.rs  icons.rs  main.rs  size.rs  state.rs  tree.rs  ui.rs
