[package]
name = "treenav"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tui-tree-widget = "0.24"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nerd-font-symbols = "0.3"
color-eyre = "0.6"
toml = "0.8"
tui-input = "0.12"
crossbeam-channel = "0.5"
walkdir = "2.5"
